fix: implement @app alias to solve context duplication error completely

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -21,6 +21,9 @@
       "@/*": [
         "./src/*"
       ],
+      "@app/*": [
+        "./app/*"
+      ],
       "@tech-store/types": [
         "../../packages/types/src"
       ],
