fix: monorepo build successful - resolve ts errors and sitemap

--- a/packages/constants/tsconfig.json
+++ b/packages/constants/tsconfig.json
@@ -1,11 +1,15 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "CommonJS",
+    "lib": ["ESNext"],
     "outDir": "./dist",
     "rootDir": "./src",
+    "strict": false,
     "skipLibCheck": true,
     "noEmitOnError": false,
-    "strict": false
+    "esModuleInterop": true,
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
