--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tech-store/constants": "*",
     "@tech-store/types": "*",
+    "lucide-react": "^0.562.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.6.0",
     "react-quill": "^2.0.0",
     "socket.io-client": "^4.8.1"
   },
