--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
+    "eslint": "^9.39.2",
     "lucide-react": "^0.562.0",
+    "next": "^16.1.6",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.6.0"
   }
