--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.7",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
