--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,15 +13,17 @@
     "create:admin": "node scripts/createAdmin.js"
   },
   "dependencies": {
-    "@tech-store/types": "*",
     "@tech-store/constants": "*",
+    "@tech-store/types": "*",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.10",
     "socket.io": "^4.8.1"
   },
