--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.562.0",
     "next": "14.0.0",
     "react": "^18",
